syntax = "proto3";

package orderingsystem;

option go_package = "./orderingsystem";

service OrderManagementService {
    rpc GetOrder(OrdersRequest) returns (OrdersResponse);
}

message OrdersRequest {
    repeated string orders_ids = 1;
}

message OrdersResponse {
    repeated string orders = 1;
    string timestamp = 2;
}